tests/transpiler/x/rb/group_by_left_join.rb
# Generated by Mochi transpiler v0.10.34 on 2025-07-21 21:57 +0700
CustomersItem = Struct.new(:id, :name, keyword_init: true)
customers = [CustomersItem.new(id: 1, name: "Alice"), CustomersItem.new(id: 2, name: "Bob"), CustomersItem.new(id: 3, name: "Charlie")]
OrdersItem = Struct.new(:id, :customerId, keyword_init: true)
orders = [OrdersItem.new(id: 100, customerId: 1), OrdersItem.new(id: 101, customerId: 1), OrdersItem.new(id: 102, customerId: 2)]
StatsItem = Struct.new(:name, :count, keyword_init: true)
stats = (begin
  groups = {}
  customers.each do |c|
    matched = false
    orders.each do |o|
      if o["customerId"] == c["id"]
        matched = true
        k = c["name"]
        groups[k] ||= []
        groups[k] << {"c" => c, "o" => o}
      end
    end
    unless matched
      o = nil
      k = c["name"]
      groups[k] ||= []
      groups[k] << {"c" => c, "o" => o}
    end
  end
  pairs = groups.to_a
  result = []
  pairs.each do |k, items|
    g = { "key" => k, "items" => items }
    result << StatsItem.new(name: g["key"], count: (begin
      _res = []
      g.each do |r|
        if r["o"]
          _res << r
        end
      end
    _res
  end).length)
end
result
end
end)
puts("--- Group Left Join ---")
stats.each do |s|
puts(([s.name, "orders:", s.count]).map{ |x| x == true ? 'True' : x == false ? 'False' : x }.join(' ').rstrip())
end
